# vs.http

./: .gitignore  README.md  TODO.md  meson.build
example/: server.cfg
example/src/: file.xml  index.xml
example/src/hello/: index.xml
example/templates/: template-0.xml
src/: main.cpp
subprojects/: canfigger.wrap  mongoose.wrap  vs-templ.wrap
subprojects/packagefiles/mongoose/: meson.build
